--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fnstuff",
   "description": "Experimental function argument structure helper for Javascript/Coffeescript",
-  "version": "0.0.1alpha",
+  "version": "0.0.1alpha1",
   "author": "Jae Kwon <jkwon.work@gmail.com>",
   "repository": {"type": "git", "url": "git://github.com/jaekwon/fnstuff.git"},
   "dependencies": {"coffee-script": ">= 1.1.3"},
