--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
-  "name": "fnstuff",
-  "description": "Experimental function argument structure helper for Javascript/Coffeescript",
-  "version": "0.0.1alpha1",
+  "name": "cardamom",
+  "description": "Experimental Coffeescript Prelude",
+  "version": "0.0.0",
   "author": "Jae Kwon <jkwon.work@gmail.com>",
-  "repository": {"type": "git", "url": "git://github.com/jaekwon/fnstuff.git"},
-  "dependencies": {"coffee-script": ">= 1.1.3"},
+  "repository": {"type": "git", "url": "git://github.com/jaekwon/Cardamom.git"},
+  "dependencies": {
+      "coffee-script": ">= 1.1.3",
+      "underscore": ">= 1.2.3"
+    },
   "keywords": ["argument", "type checking", "function", "node.js", "coffeescript"],
-  "main": "./lib/fnstuff",
+  "main": "./lib/cardamom",
   "engines": {"node": ">= 0.4.7"},
   "contributors": [
   ]
