--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cardamom",
   "description": "Experimental Coffeescript Prelude",
-  "version": "0.0.6b",
+  "version": "0.0.7",
   "author": "Jae Kwon <jkwon.work@gmail.com>",
   "repository": {"type": "git", "url": "git://github.com/jaekwon/Cardamom.git"},
   "dependencies": {
